# rpy2-complex-heatmap-grammar

./: Example.ipynb  Examples.ipynb  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
data/: random.csv
heatmap_grammar/: __init__.py  annotations.py  clustering.py  constants.py  dendrograms.py  guides.py  heatmap.py  markdown.py  plot.py  r.py  rpy2_helpers.py  scales.py  unit.py  utils.py
