[metadata]
name = heatmap-grammar
description = Python heatmap interface using intuitive grammar of graphics, implemented as an rpy2 wrapper around ComplexHeatmap package
long_description = file: ./README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/krassowski/rpy2-complex-heatmap-grammar/issues
    Source Code = https://github.com/krassowski/rpy2-complex-heatmap-grammar
license = MIT license
license_file = LICENSE
author = Michał Krassowski
version = attr: heatmap_grammar.__version__

[options]
packages = find:
python_requires = >=3.9
